@@ -1,5 +1,7 @@
 2002-09-18  Junichi Uekawa  <dancer@debian.org>
 
+	* dsh.c (main): add error checking for bindtextdomain, and textdomain calls.
+
 	* configure.ac: 0.21.2 
 	with even more minor cosmetic bugfixes, which does not address the main problem.
 
